CHANGELOG
=========

[1.2.1]
 * Enhanced tooltips
 * Remove "Show Widget Criteria" item unless developer mode enabled
 * Minor bug fixes

[1.2]
 * Maps markers can now have URLs associated with them when clicked
 * Add support for time fields to auto-round to certain intervals
 * Minor bug fixes

[1.1.1]
 * Add Hitcount app
 * Minor bug fixes

[1.1]
 * Criteria overrides via URL parameters.
 * Report Bookmarking
 * Enhanced auto reload reports
 * REST interface updates
 * Web UI changes and fixes
 * Web UI - Report history added
 * Web UI - Add guest read only access
 * Web UI - Report level submenus.
 * Dramatically improved system reliability
 * Reliability - cache improvements.
 * Reliability - Race condition checks.
 * Reliability - Database lock prevention.
 * Metric datasource added.
 * Metrics  DS - Support for push and pull outside data sources
 * Stacked widget support added to model.
 * Add static (Database based) reports.
 * Add support for banners and system wide announcements.
 * Added weather overlay
 * Update scheduler to support running complete reports
 * Fix github issue #1

[1.0]
 * Refactor Jobs to use different task models: celery, sync, and async
   * Job methods now return QueryComplete, QueryContinue, or QueryError's
   * Update AnalysisTable definitions and approach with new Job model
 * Introduce 'progressd', external Job status daemon
 * Update base Django to version 1.7
 * Support additional auth methods for Devices
 * Add support for custom data formatters
 * Improved documentation

[0.9.8.3]
 * Enhance job handling with interrupted jobs

[0.9.8.2]
 * Add update_progress option to Job model

[0.9.8.1]
 * Support maps in embedded widgets
 * Add new line at the end
 * Add devices internal and rest tests
 * Replace DeviceDelete with DeviceDetail.delete

[0.9.8]
[0.9.8rc3]
 * Enhance one test case for token generation
 * Use same token with same user/url/criteria
 * Fix Embed window

[0.9.8rc2]